--- a/public/contactos.html
+++ b/public/contactos.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
-  <link rel="stylesheet" href="/public/contact.css">
-  <link rel="shortcut icon" href="/public/img/silla.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/contact.css">
+  <link rel="shortcut icon" href="/img/silla.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -20,20 +20,16 @@
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contactos.html">Contacto</a></li>
             </ul>
-            <div class="social-icons">
-                <a href="h"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
+            
         </nav>
     </div>
 </header>
 
   <main>
     <aside class="social-icons">
-      <a href="URL_DE_TU_PERFIL_DE_FACEBOOK"><img src="/img/facebook.ico" alt="Facebook"></a>
-      <a href="URL_DE_TU_PERFIL_DE_TWITTER"><img src="/img/gorjeo.ico" alt="Twitter"></a>
-      <a href="URL_DE_TU_PERFIL_DE_INSTAGRAM"><img src="/img/instagram.ico" alt="Instagram"></a>
+      <a href="https://www.facebook.com/"><img src="/img/facebook.ico" alt="Facebook"></a>
+      <a href="https://twitter.com/"><img src="/img/gorjeo.ico" alt="Twitter"></a>
+      <a href="https://www.instagram.com/"><img src="/img/instagram.ico" alt="Instagram"></a>
   </aside>
   
     <section id="contacto">
